# textX-jinja

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  runtests.sh  setup.cfg  setup.py
tests/test_basic/: test_basic.py
tests/test_basic/output/: first.txt  second
tests/test_basic/templates/: second.jinja
tests/test_filename_substitution/test_boolean/: test_boolean.py
tests/test_filename_substitution/test_boolean/templates/: first__here__.txt.jinja
tests/test_filename_substitution/test_plain/: test_plain.py
tests/test_filename_substitution/test_plain/output/: this_issomevaluefile.txt
tests/test_folder_structure/: test_folder_structure.py
tests/test_iterable/: test_iterable.py
tests/test_iterable/templates/: __models__.txt.jinja
tests/test_iterable/test_map_names/: test_map_names.py
tests/test_iterable/test_transform_names/: test_transform_names.py
tests/test_iterable/test_transform_names/output/: .test_first.cf  .test_second.cf
tests/test_iterable/test_transform_names/templates/: __vars__.cf.jinja
tests/test_single/: first.txt.jinja  test_single.py
textxjinja/: __init__.py
