[project]
name = "textX-jinja"
description = "Meta-language for DSL implementation inspired by Xtext"
dynamic = ["version"]
authors = [
    {name = "Igor R. Dejanović", email = "igor.dejanovic@gmail.com"},
]
maintainers = [
    {name = "Igor R. Dejanović", email = "igor.dejanovic@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["textX", "generator", "template engine", "DSL"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.8"
dependencies = [
    "textX",
    "jinja2"
]

[project.urls]
Homepage = "https://github.com/textX/textX-jinja/"
Repository = "https://github.com/textX/textX-jinja/"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[tool.flit.module]
name = "textxjinja"

[tool.flit.sdist]
exclude = ["**/.*"]

[project.optional-dependencies]
dev = [
    "ruff",
    "flit",
    "coverage",
    "coveralls",
    "pytest",
]

test = [
    "ruff",
    "coverage",
    "coveralls",
    "pytest",
]

[tool.ruff]
line-length = 90
indent-width = 4

[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/#rule-selection
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
